button layout issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,19 +160,6 @@ strong {
   font-size:20px;
 }
 
-.circular-landscape {
-  display: inline-block;
-  position: relative;
-  width: auto;
-  height: 300px;
-  border-radius: 50%;
-}
-
-.circular-landscape img {
-  width: auto;
-  height: 100%;
-}
-
 .email-glyph {
   font-size: 35px;
   color: white;
